# book

./: #main.cpp#  .directory  CMakeLists.txt  compile_commands.json  main.cpp  run.sh
include/: #main.h#  main.h
src/gui/: #gui.cpp#  CMakeLists.txt  dependencies.sh  f.sh  gui.cpp  gui1.cpp
src/gui/src/: glad.c
src/part1/: #one.cpp#  CMakeLists.txt  one.cpp  one.h  one1.cpp
